# fred-explorer

./: .env.example  .gitignore  FRED_API_FINDINGS.md  FRED_API_STUDY_SUMMARY.md  README.md  database.py  fred_api_cached.py  fred_api_secure.py  main.py  pyproject.toml  requirements.txt  run.py
.openhands/microagents/: repo.md
static/: index.html
