[project]
name = "fred-explorer"
version = "0.1.0"
description = "FRED API Explorer - Secure implementation for exploring Federal Reserve Economic Data"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.0",
    "beautifulsoup4>=4.14.0",
    "python-dotenv>=1.2.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
]
